--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 26
+    buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId 'com.landusemonitor'
+        applicationId 'com.ioer.monitor'
         minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 20
+        targetSdkVersion 26
+        versionCode 22
         versionName "1.4"
     }
     buildTypes {
@@ -25,10 +25,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:design:22.2.0'
-    compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.github.bluejamesbond:textjustify-android:2.1.1'
-    compile 'org.jsoup:jsoup:1.9.1'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api 'com.android.support:appcompat-v7:26.1.0'
+    api 'com.android.support:design:26.1.0'
+    api 'de.hdodenhof:circleimageview:1.3.0'
+    api 'com.github.bluejamesbond:textjustify-android:2.1.1'
+    api 'org.jsoup:jsoup:1.9.1'
 }
